linux-rex (1.0) unstable; urgency=medium

  * Port to kernels 6.1+
  * More verbose information during importing databases
  * Update Hyperscan to release 5.4.2

 -- Ivan Koveshnikov <ivan.koveshnikov@gcore.com>  Mon, 15 Apr 2024 22:30:11 +0100

linux-rex (0.1) unstable; urgency=medium

  * Initial release

 -- Sergey Nizovtsev <sn@tempesta-tech.com>  Tue, 14 Jul 2022 16:24:30 +0300