@@ -1,6 +1,6 @@
 PACKAGE_NAME="linux-rex"
 PACKAGE_VERSION="#MODULE_VERSION#"
-BUILD_EXCLUSIVE_KERNEL="^6[.](1)[.]"
+BUILD_EXCLUSIVE_KERNEL="^6[.].*"
 BUILD_EXCLUSIVE_ARCH=x86_64
 MAKE[0]="./build.sh ${kernel_source_dir} M=${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build -j${parallel_jobs}"
 CLEAN="make -C ${kernel_source_dir} M=${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build clean"
